src/Components/TaskWindow/TaskWindow.scss
.task__window {
  top: 40%;
  width: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: white;
  padding: 10px;
  border-radius: 15px;

  form {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
}

.task__window.success,
.task__window.fail {
  border-width: 4px;
  border-style: solid;
}

.task__window.success {
  border-color: #48d248;
}

.task__window.fail {
  border-color: darkred;
}

.task__window__close {
  align-self: flex-end;
  font-size: larger;
  padding: 2px;
  margin-bottom: 10px;
}

.task__window__close:hover,
.task__window__close:active {
  color: #be0a0a;
  background-color: white;
}

.task__window__send {
  width: 50%;
  margin: 15px 0 5px;
}

.task__window__question {
  width: 70%;

  input {
    border: 1px solid black;
    padding: 3px 5px;
  }
}

.task__window__input {
  margin-left: 5px;
  width: 60%;
}

